# Smart-District-Administration

./: Dockerfile  LOCAL_DEVELOPMENT.md  REACT_CONVERSION_GUIDE.md  WINDOWS_SETUP.md  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  react_app.js  react_backend.py  react_charts.js  react_components.js  react_deployment.md  react_pages.js  react_services.js  setup-local.bat  setup-local.ps1  setup-local.sh
backend/: main.py
public/: index.html
src/: App.css  App.js  index.css
src/components/Auth/: ProtectedRoute.js
src/components/Common/: ErrorBoundary.js
src/components/Layout/: Layout.js
src/contexts/: AuthContext.js
src/pages/: Dashboard.js  DepartmentCoordination.js  GeospatialView.js  Login.js  PerformanceMetrics.js  PredictiveAnalytics.js  Reports.js  ResourceManagement.js  TaskTracking.js
src/services/: api.js  authService.js
